objects/BMCServiceDesk__BMC_CommonCILink__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data for all items associated with CIs.</description>
    <fields>
        <fullName>BMCServiceDesk__CIInstance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>BMC_CommonCILinks</relationshipLabel>
        <relationshipName>BMC_CommonCILinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__CIInstance__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Configuration_Item__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?id=1010&amp;cmdbRecordId=&quot;+  BMCServiceDesk__CIInstance__r.Id,  BMCServiceDesk__CIInstance__r.Name  , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Item / Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CI link to Task on Std taask layout</description>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
        <relationshipName>BMC_CommonCILinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <formula>BMCServiceDesk__CIInstance__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstanceID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ObjectRecordID__c</fullName>
        <label>ObjectRecordID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Task CI Link</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__ObjectName__c</columns>
        <columns>BMCServiceDesk__ObjectRecordID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task CI Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>